--- a/api/pom.xml
+++ b/api/pom.xml
@@ -24,6 +24,17 @@
 		-->
 
 		
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.0.4</version>
+		</dependency>
 		
 
 		<!-- Begin OpenMRS core -->
